--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
          <title>Sheba's Amazing Website</title>
          <style>
             body {
-                background: rgb(125, 198, 205);
+                background: rgb(19, 245, 27));
                 color: rgb(45, 45, 45);
                 padding: 10px;
                 font-family: arial;
@@ -16,10 +16,12 @@
         
             /* navigation menu */
             nav {
-                background: rgb(239, 80, 41);
+                background: rgb(107, 18, 223);
                 margin: 0 auto;
+                margin-bottom: 20px;
                 display: flex;
                 padding: 10px;
+                border-radius: 50px;
             }
             nav h1 {
                 display: flex;
@@ -42,8 +44,9 @@
         
             /* main container area beneath menu */
             main {
-                background: rgb(245, 238, 219);
+                background: rgb(12, 36, 219);
                 display: flex;
+                border-radius: 10px 50px;
             }
             .sidebar {
                 margin-right: 25px;
